Adicionando a pasta JS

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <tbody> 
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">AMANDA</td> <td>img</td> </tr>
             <tr class="active-row"> <td>BRONZE</td> <td>0</td> <td id="001">ASPIRA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">IASMIN</td> <td>img</td> </tr>
+            !<tr> <td>BRONZE</td> <td>0</td> <td id="001">IASMIN</td> <td>img</td> </tr>
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">ICARO</td> <td>img</td> </tr>
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">RAFAEL</td> <td>img</td> </tr>
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">YUKA</td> <td>img</td> </tr>
 
         </tbody>
+        <script src="js/um.js"></script> 
     </table>
 </body>
 </html>
