correção de nomes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">ICARO</td> <td>img</td> </tr>
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">RAFAEL</td> <td>img</td> </tr>
             <tr> <td>BRONZE</td> <td>0</td> <td id="001">YUKA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">Willisbeats</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">José</td> <td>img</td> </tr>
+            <tr> <td>BRONZE</td> <td>0</td> <td id="001">WILLISBEATS</td> <td>img</td> </tr>
+            <tr> <td>BRONZE</td> <td>0</td> <td id="001">JOSÉ</td> <td>img</td> </tr>
         </tbody>
         <script src="js/um.js"></script> 
     </table>
