--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <tr id="titulo-ranking"> <th>RANKING</th> <th>TIER</th> <th>ID</th> <th>FOTO</th>  </tr>
         </thead>
 
-        <tbody> 
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">AMANDA</td> <td>img</td> </tr>
-            <tr class="active-row"> <td>BRONZE</td> <td>0</td> <td id="001">ASPIRA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">IASMIN</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">ICARO</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">RAFAEL</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">YUKA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">WILLISBEATS</td> <td>img</td> </tr>
-            <tr> <td>BRONZE</td> <td>0</td> <td id="001">JOSÉ</td> <td>img</td> </tr>
+        <tbody>
+            <tr class="active-row"> <td>BRONZE III</td> <td>2</td> <td id="001">ICARO</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>2</td> <td id="001">RAFAEL</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">ASPIRA</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">JOSÉ</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">AMANDA</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">IASMIN</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">YUKA</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">WILLISBEATS</td> <td>img</td> </tr>
         </tbody>
         <script src="js/um.js"></script> 
     </table>
