atualização de nick

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </thead>
 
         <tbody>
-            <tr class="active-row"> <td>BRONZE III</td> <td>2</td> <td id="001">ICARO</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>2</td> <td id="001">RAFAEL</td> <td>img</td> </tr>
+            <tr class="active-row"> <td>BRONZE III</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
+            <tr> <td>BRONZE IV</td> <td>2</td> <td id="001">Jack</td> <td>img</td> </tr>
             <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">ASPIRA</td> <td>img</td> </tr>
             <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">JOSÉ</td> <td>img</td> </tr>
             <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">AMANDA</td> <td>img</td> </tr>
