potuação, add participantes

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         </thead>
 
         <tbody>
-            <tr class="active-row"> <td>BRONZE III</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>2</td> <td id="001">Jack</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">ASPIRA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">JOSÉ</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">AMANDA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">IASMIN</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">YUKA</td> <td>img</td> </tr>
-            <tr> <td>BRONZE IV</td> <td>0</td> <td id="001">WILLISBEATS</td> <td>img</td> </tr>
+            <tr id="oneposition"  class="bronzecolor"> <td>BRONZE III</td> <td>2</td> <td id="001">Jack</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE III</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE III</td> <td>0</td> <td id="001">Aspira</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Iasmin</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Willisbeats</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Yuka</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Luiz</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">José</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Amanda</td> <td>img</td> </tr>
+
         </tbody>
         <script src="js/um.js"></script> 
     </table>
