--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </thead>
 
         <tbody>
-            <tr id="oneposition"  class="bronzecolor"> <td>BRONZE II</td> <td>2</td> <td id="001">Jack</td> <td>img</td> </tr>
-            <tr class="bronzecolor"> <td>BRONZE II</td> <td>0</td> <td id="001">Setsuna</td> <td>img</td> </tr>
-            <tr class="bronzecolor"> <td>BRONZE III</td> <td>0</td> <td id="001">Aspira</td> <td>img</td> </tr>
+            <tr id="oneposition"  class="bronzecolor"> <td>BRONZE I</td> <td>2</td> <td id="001">Jack</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE II</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE III</td> <td>2</td> <td id="001">Aspira</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Iasmin</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Willisbeats</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Yuka</td> <td>img</td> </tr>
