--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
         <tbody>
             <tr id="oneposition"  class="silvercollor"> <td>PRATA V</td> <td>0</td> <td id="001">Jack</td> <td>img</td> </tr>
-            <tr class="bronzecolor"> <td>BRONZE II</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
-            <tr class="bronzecolor"> <td>BRONZE II</td> <td>0</td> <td id="001">Aspira</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE I</td> <td>2</td> <td id="001">Setsuna</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE I</td> <td>0</td> <td id="001">Aspira</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Willisbeats</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>2</td> <td id="001">Iasmin</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Yuka</td> <td>img</td> </tr>
+            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Amanda</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Luiz</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">José</td> <td>img</td> </tr>
-            <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Amanda</td> <td>img</td> </tr>
 
         </tbody>
         <script src="js/um.js"></script> 
