--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -24,6 +24,70 @@
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Amanda</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">Luiz</td> <td>img</td> </tr>
             <tr class="bronzecolor"> <td>BRONZE IV</td> <td>0</td> <td id="001">José</td> <td>img</td> </tr>
+        </tbody>
+        <script src="js/um.js"></script> 
+    </table>
+</body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MTGgood</title>
+    <style>
+        body {
+            background-image: url(img/backgroundranking.png);
+            
+            background-size: cover;
+            text-align: center;
+            background-size: cover;
+            background-position: center;
+            color: rgb(0, 0, 0);
+            font-family: sans-serif;
+        }
+
+        table {
+            margin:auto;
+        }
+
+        .styled-table{
+            border-collapse: collapse; /*para garantir que não haja espaço entre as bordas da célula*/
+            font-size: 0.9em;
+         }
+        .styled-table thead tr{
+            background-color: #800303;
+            color: #ffffff;
+            text-align: left;
+         }
+         .styled-table th, .styled-table td {
+            padding: 10px 10px;
+        }
+        .styled-table th, .styled-table td {
+             padding: 12px 15px;
+        }
+        .styled-table tbody tr {
+            border-bottom: 1px solid #dddddd; /*Adiciona uma borda inferior a linha para separação*/
+            background-color: #f3f3f3;
+        }
+
+    </style>
+</head>
+<body class="bodyall">
+    <table class="styled-table">
+       
+        <thead>
+            <tr> <th>NICKNAME</th> <th>PONTUAÇÃO</th> </tr>
+        </thead>
+
+        <tbody>
+            <tr> <td>ALERRANDRO</td> <td>0</td> </tr>
+            <tr> <td>RAFAEL</td> <td>0</td> </tr>
+            <tr> <td>ÍCARO</td> <td>0</td> </tr>
+            <tr> <td>LUCAS LEITE</td> <td>0</td> </tr>
+            <tr> <td>PEDRO PASSOS</td> <td>0</td> </tr>
         </tbody>
         <script src="js/um.js"></script> 
     </table>
