--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             <tr> <td>RAFAEL</td> <td>0</td> </tr>
             <tr> <td>ÍCARO</td> <td>0</td> </tr>
             <tr> <td>LUCAS LEITE</td> <td>0</td> </tr>
+            <tr> <td>WILLIAN</td> <td>0</td> </tr>
+            <tr> <td>RICHARLISON</td> <td>0</td> </tr>
         </tbody>
         <script src="js/um.js"></script> 
     </table>
