--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
     <title> MTGgood </title>
     <style>
         body {
-            background-image: url(img/backgroundranking.png);
-            
+            background-image: url(img/backgroundrankinga.jpg);
+            background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
-            background-size: cover;
-            background-position: center;
+            background-position:top;
             color: rgb(0, 0, 0);
             font-family: sans-serif;
         }
