--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         body {
             background-image: url(img/backgroundrankinga.jpg);
             background-repeat: no-repeat;
-            background-size: cover;
+            /*background-size: cover;*/
             text-align: center;
             background-position:top;
             color: rgb(0, 0, 0);
