--- a/index.html
+++ b/index.html
@@ -89,13 +89,16 @@
         </thead>
 
         <tbody>
-            <tr> <td>PEDRO PASSOS</td> <td>1</td> </tr>
-            <tr> <td>ALERRANDRO</td> <td>0</td> </tr>
-            <tr> <td>RAFAEL</td> <td>0</td> </tr>
-            <tr> <td>ÍCARO</td> <td>0</td> </tr>
-            <tr> <td>LUCAS LEITE</td> <td>0</td> </tr>
-            <tr> <td>WILLIAN</td> <td>0</td> </tr>
-            <tr> <td>RICHARLISON</td> <td>0</td> </tr>
+            <!-- total de partidas 2 -->
+            <tr> <td>PEDRO PASSOS</td> <td>4</td> </tr> <!-- total de partidas 2--> <!-- total de vitorias 1--> <!-- total de empates 0 -->
+            <tr> <td>RAFAEL</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
+            <tr> <td>ÍCARO</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
+            <tr> <td>LUCAS LEITE</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
+            <tr> <td>RICHARLISON</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <tr> <td>SUNNY</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <tr> <td>ALERRANDRO</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <tr> <td>PEDRO LUCAS</td> <td>0</td> </tr> <!-- total de partidas 0 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <tr> <td>WILLIAN</td> <td>0</td> </tr> <!-- total de partidas 0 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
         </tbody>
         <script src="js/um.js"></script> 
     </table>
