--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <tr> <td>RAFAEL</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
             <tr> <td>ÍCARO</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
             <tr> <td>LUCAS LEITE</td> <td>3</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
-            <tr> <td>RICHARLISON</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <tr> <td>RICHARLISSON</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
             <tr> <td>SUNNY</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
             <tr> <td>ALERRANDRO</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
             <tr> <td>PEDRO LUCAS</td> <td>0</td> </tr> <!-- total de partidas 0 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
