--- a/index.html
+++ b/index.html
@@ -84,21 +84,22 @@
     <table class="styled-table">
        
         <thead>
-            <tr id="formato"> <th colspan="2">COMMANDER</th> </tr>
-            <tr> <th>NICKNAME</th> <th>PONTUAÇÃO</th> </tr>
+            <tr id="formato"> <th colspan="5">COMMANDER</th> </tr>
+            <tr> <th>NICKNAME</th> <th>PONTUAÇÃO</th> <th>VITÓRIAS</th> <th>EMPATES</th> <th>PARTIDAS</th> </tr>
         </thead>
 
         <tbody>
-            <!-- total de partidas 2 -->
-            <tr> <td>RAFAEL</td> <td>10</td> </tr> <!-- total de partidas 5 --> <!-- total de vitorias 1 --> <!-- total de empates 1 -->
-            <tr> <td>ÍCARO</td> <td>8</td> </tr> <!-- total de partidas 5 --> <!-- total de vitorias 1 --> <!-- total de empates 1 -->
-            <tr> <td>LUCAS LEITE</td> <td>5</td> </tr> <!-- total de partidas 4 --> <!-- total de vitorias 0 --> <!-- total de empates 1 -->
-            <tr> <td>PEDRO PASSOS</td> <td>5</td> </tr> <!-- total de partidas 3--> <!-- total de vitorias 1--> <!-- total de empates 0 -->
-            <tr> <td>SUNNY</td> <td>4</td> </tr> <!-- total de partidas 4 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
-            <tr> <td>RICHARLISSON</td> <td>2</td> </tr> <!-- total de partidas 2 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
-            <tr> <td>ALERRANDRO</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
-            <tr> <td>PEDRO LUCAS</td> <td>1</td> </tr> <!-- total de partidas 1 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
-            <tr> <td>WILLIAN</td> <td>0</td> </tr> <!-- total de partidas 0 --> <!-- total de vitorias 0 --> <!-- total de empates 0 -->
+            <!-- total de partidas 5 -->
+            <!--     PLAYER  ---   PONTOS --- VITÓRIAS - EMPATES -- PARTIDAS -->
+            <tr> <td>RAFAEL</td>        <td>10</td> <td>3</td> <td>1</td> <td>5</td> </tr>
+            <tr> <td>ÍCARO </td>        <td>8</td> <td>1</td> <td>1</td> <td>5</td> </tr>
+            <tr> <td>LUCAS LEITE </td>  <td>5</td> <td>0</td> <td>1</td> <td>4</td> </tr>
+            <tr> <td>PEDRO PASSOS</td>  <td>5</td> <td>1</td> <td>0</td> <td>3</td> </tr>
+            <tr> <td>SUNNY</td>         <td>4</td> <td>0</td> <td>0</td> <td>4</td> </tr>
+            <tr> <td>RICHARLISSON</td>  <td>2</td> <td>0</td> <td>0</td> <td>2</td> </tr>
+            <tr> <td>ALERRANDRO</td>    <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr>
+            <tr> <td>PEDRO LUCAS</td>   <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr>
+            <tr> <td>WILLIAN</td>       <td>0</td> <td>0</td> <td>0</td> <td>0</td> </tr>
         </tbody>
         <script src="js/um.js"></script> 
     </table>
