--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         table {
-            margin:auto;
+            margin: 15% auto;
         }
 
         #formato{
@@ -89,17 +89,18 @@
         </thead>
 
         <tbody>
-            <!-- total de partidas 5 6  -->
+            <!-- total de partidas 7  -->
             <!--     PLAYER  ---   PONTOS --- VITÓRIAS - EMPATES -- PARTIDAS -->
-            <tr> <td>RAFAEL</td>        <td>13</td> <td>4</td> <td>1</td> <td>6</td> </tr>
-            <tr> <td>ÍCARO </td>        <td>9</td> <td>1</td> <td>1</td> <td>6</td> </tr>
+            <tr> <td>RAFAEL</td>        <td>15</td> <td>4</td> <td>2</td> <td>7</td> </tr>
+            <tr> <td>ÍCARO </td>        <td>11</td> <td>1</td> <td>2</td> <td>7</td> </tr>
             <tr> <td>PEDRO PASSOS</td>  <td>7</td> <td>1</td> <td>1</td> <td>4</td> </tr>
             <tr> <td>LUCAS LEITE </td>  <td>7</td> <td>0</td> <td>2</td> <td>5</td> </tr>
-            <tr> <td>SUNNY</td>         <td>5</td> <td>0</td> <td>0</td> <td>5</td> </tr>
+            <tr> <td>SUNNY</td>         <td>7</td> <td>0</td> <td>1</td> <td>6</td> </tr>
             <tr> <td>RICHARLISSON</td>  <td>4</td> <td>0</td> <td>1</td> <td>3</td> </tr>
+            <tr> <td>PEDRO LUCAS</td>   <td>3</td> <td>0</td> <td>1</td> <td>2</td> </tr>
             <tr> <td>ALERRANDRO</td>    <td>2</td> <td>0</td> <td>0</td> <td>2</td> </tr>
             <tr> <td>WILLIAN</td>       <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr>
-            <tr> <td>PEDRO LUCAS</td>   <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr>
+            
             
         </tbody>
         <script src="js/um.js"></script> 
