--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
         </thead>
 
         <tbody>
-            <!-- total de partidas 14 -->
+            <!-- total de partidas 15-->
             <!--     PLAYER  ---          PONTOS --- VITÓRIAS -  EMPATES -- PARTIDAS -->
             
-            <tr> <td>ÍCARO </td>        <td>27</td> <td>5</td> <td>3</td> <td>14</td> </tr>
+            <tr> <td>ÍCARO </td>        <td>28</td> <td>5</td> <td>3</td> <td>15</td> </tr>
             <tr> <td>RAFAEL</td>        <td>23</td> <td>10</td> <td>2</td> <td>13</td> </tr>
-            <tr> <td>LUCAS LEITE </td>  <td>19</td> <td>2</td> <td>3</td> <td>12</td> </tr>
-            <tr> <td>SUNNY</td>         <td>14</td> <td>0</td> <td>2</td> <td>12</td> </tr>
-            <tr> <td>ALERRANDRO</td>    <td>10</td> <td>0</td> <td>1</td> <td>9</td> </tr>
+            <tr> <td>LUCAS LEITE </td>  <td>22</td> <td>2</td> <td>3</td> <td>13</td> </tr>
+            <tr> <td>SUNNY</td>         <td>15</td> <td>0</td> <td>2</td> <td>13</td> </tr>
+            <tr> <td>ALERRANDRO</td>    <td>11</td> <td>0</td> <td>1</td> <td>10</td> </tr>
             <tr> <td>PEDRO PASSOS</td>  <td>9</td> <td>1</td> <td>1</td> <td>6</td> </tr>
             <tr> <td>RICHARLISSON</td>  <td>8</td> <td>0</td> <td>2</td> <td>7</td> </tr>
             <tr> <td>PEDRO LUCAS</td>   <td>6</td> <td>1</td> <td>1</td> <td>4</td> </tr>
@@ -115,20 +115,20 @@
         </thead>
 
         <tbody>
-            <!-- total de partidas 1  -->
-            <!--     PLAYER  ---          PONTOS --- VITÓRIAS -  EMPATES -- PARTIDAS -->
+            <!-- total de partidas 2  -->
+            <!--     PLAYER  ---          PONTOS --- VITÓRIAS - EMPATES -- PARTIDAS -->
 
             
+            <tr> <td>ÍCARO </td>        <td>4</td> <td>1</td> <td></td> <td>2</td> </tr>
+            <tr> <td>LUCAS LEITE </td>  <td>4</td> <td>1</td> <td></td> <td>2</td> </tr>
             <tr> <td>PEDRO PASSOS</td>  <td>3</td> <td>1</td> <td></td> <td>1</td> </tr>
             <tr> <td>WILLIAN</td>       <td>3</td> <td>1</td> <td></td> <td>1</td> </tr>
-            <tr> <td>RAFAEL</td>        <td>1</td> <td></td> <td></td> <td>1</td> </tr>
-            <tr> <td>ÍCARO </td>        <td>1</td> <td></td> <td></td> <td>1</td> </tr>
-            <tr> <td>LUCAS LEITE </td>  <td>1</td> <td></td> <td></td> <td>1</td> </tr>
-            <tr> <td>SUNNY</td>         <td>1</td> <td></td> <td></td> <td>1</td> </tr>
+            <tr> <td>RAFAEL</td>        <td>2</td> <td></td> <td></td> <td>1</td> </tr>
+            <tr> <td>SUNNY</td>         <td>2</td> <td></td> <td></td> <td>2</td> </tr>
             <tr> <td>PEDRO LUCAS</td>   <td>1</td> <td></td> <td></td> <td>1</td> </tr>
-            <tr> <td>RICHARLISSON</td>  <td>1</td> <td></td> <td></td> <td>1</td> </tr>
-            <tr> <td>ALERRANDRO</td>    <td></td> <td></td> <td></td> <td></td> </tr>
-            <!-- <tr> <td>JOSÉ</td>          <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr> -->
+            <tr> <td>RICHARLISSON</td>  <td>2</td> <td></td> <td></td> <td>2</td> </tr>
+            <tr> <td>ALERRANDRO</td>    <td>1</td> <td></td> <td></td> <td>1</td> </tr>
+            <!-- <tr> <td>JOSÉ</td>     <td>1</td> <td>0</td> <td>0</td> <td>1</td> </tr> -->
         </tbody>
 
         <script src="js/um.js"></script> 
